# StegDetector

./: CMakeLists.txt
HideInformation/: CMakeLists.txt  LSB.cpp  LSB.hpp
ImageWrapper/: BMPImage.cpp  BMPImage.hpp  CMakeLists.txt  ImageDiff.cpp  ImageDiff.hpp
StegDetector/: CMakeLists.txt  LSBDetection.cpp  LSBDetection.hpp
